# file-server

./: README.md
client/: README.md  package-lock.json  package.json
client/src/routes/: +page.svelte
server/: Cargo.toml  clippy.toml  rustfmt.toml
server/src/: api_doc.rs  main.rs
server/src/handlers/: file.rs  folder.rs  mod.rs
server/src/models/: mod.rs
shared/: index.txt
shared/text/: index.txt
